# Cork

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Cork.sln  Environment.props  README.md  checks.json  setup_thirdparty.sh  valgrind-out-save.txt  valgrind-out.txt
CorkLib/: CMakeLists.txt  CorkDefs.h  CorkLib.vcxproj  CorkLib.vcxproj.filters  ReadMe.txt  SIMDInstructionSet.h  Statistics.h  TestParams.props  TriangleMesh.cpp  TriangleMesh.h  aabvh.cpp  cork.h  dllmain.cpp
CorkLib/Accel/: aabvh.h
CorkLib/FileFormats/: files.h  ifs.cpp  off.cpp
CorkLib/Intersection/: PerturbMatrices.cpp  absext4.h  empty3d.cpp  empty3d.h  ext4.h  fixint.h  gmpext4.h  quantization.cpp  quantization.h  triangle.c  unsafeRayTriIsct.h
CorkLib/Math/: BoundingBox.h  Primitives.h  Ray3D.h  SSERng.h  Vector2DTemplate.h  Vector3DSSE.h  Vector3DTemplate.h
CorkLib/Mesh/: EGraphCache.h  Intersection.cpp  IntersectionProblem.h  Mesh.cpp  MeshBase.h  TopoCache.cpp  TopoCache.h
CorkLib/Rel-Dbl/CorkLib.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CorkLib.lastbuildstate  CorkLib.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
CorkLib/Statistics/: StatsImpl.h
CorkLib/Util/: AlignedUniquePtr.h  CachingFactory.h  ConstuctOnceResizeableVector.h  FastStack.h  ManagedIntrusiveList.h  NonInitializingAllocator.h  Result.h  SparseVector.h  SystemStats.h  ThreadPool.cpp  ThreadPool.h  ThreadingHelpers.h  Xoroshiro128Plus.h  log.cpp  prelude.h  unionFind.h
Documents/: BestFitPlane_tests.mw  Ext Calc workpad.mw  Exterior Calculus in R4 ABS Tri Tri Tri Intersection.mw  Exterior Calculus in R4 ABS Triangle Edge Intersection.mw  Exterior Calculus in R4 AbsExt for Unit Tests.mw  Exterior Calculus in R4 FixInt for Unit Tests.mw  (+5 more)
RegressionTest/: CMakeLists.txt  ReadMe.txt  RegressionTest.cpp  RegressionTest.vcxproj  RegressionTest.vcxproj.filters  valgrind-out.txt
RegressionTest/Rel-Dbl/RegressionTest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  RegressionTest.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
UnitTest/: CMakeLists.txt  CachingFactoryTest.cpp  ConstructOnceResizeableVectorTest.cpp  RandomGraphGenerator.h  UnionFindBenchmark.cpp  UnionFindTest.cpp  Vector2DTest.cpp  Vector3DBenchmark.cpp  Vector3DTest.cpp  Vector3DTestBase.in  Vector3DTestsDouble.cpp  Vector3DTestsDoubleAVX.cpp  boundary_edge_tests.cpp  bounding_box_benchmark.cpp  caching_factory_test.cpp  catch2_matchers.h  construct_once_resizeable_vector_test.cpp  exterior_calculus_benchmark.cpp  exterior_calculus_test.cpp  geometric_tests.cpp  growable_streambuf_test.cpp  intersection_tests.cpp  off_file_io_test.cpp  performance_stream_benchmark.cpp  performance_stream_test.cpp  polygon_tests.cpp  strong_typedefs_tests.cpp  surface_mesh_tests.cpp  svd_centroid_3d_tests.cpp  topo_cache_tests.cpp  topology_tests.cpp  triangulator_test.cpp  union_find_benchmark.cpp  vector_2D_test.cpp  vector_3D_benchmark.cpp  vector_3D_test.cpp
UnitTest/Test Files/: Quadrilateral with 3 Holes.off  Quadrilateral with Hole.off  Quadrilateral1 Bad Counts.off  Quadrilateral1 Bad Triangle.off  Quadrilateral1 Bad Vertex.off  Quadrilateral1 Comment.off  Quadrilateral1 Duplicate Vertex.off  Quadrilateral1 One Nontriangle Face.off  Quadrilateral1.off  Schoen_16WithSelfIntersections.off  ant.off
UnitTest/UnitTests/: CachingFactoryTest.cpp  ConstructOnceResizeableVectorTest.cpp  TestParams.props  UnionFindTest.cpp  UnitTests.vcxproj
src/: CMakeLists.txt  CorkDefs.h  constants.hpp  cork.cpp  cork.h
src/2d_geometry/: polygon.cpp  polygon.hpp
src/Accel/: aabvh.cpp
src/FileFormats/: ifs.cpp  off.cpp
src/Intersection/: Intersection.cpp  empty3d.cpp  intersection.cpp  intersection_problem_base.cpp  perturbation_epsilon.cpp  self_intersection_finder.cpp  streaming_operators.cpp  triangle.c  triangulator.cpp
src/Mesh/: Intersection.cpp  Mesh.cpp  TopoCache.cpp  TriangleMesh.cpp  boundary_edge_builder.cpp  mesh.cpp  mesh_base.cpp  mesh_builder.cpp  surface_mesh.cpp  topo_cache.cpp  triangle_mesh.cpp  triangle_mesh_impl.cpp
src/accel/: aabvh.cpp  aabvh.hpp
src/file_formats/: files.hpp  ifs.cpp  off.cpp  polyline3d.cpp
src/intersection/: edge_cache.hpp  empty3d.cpp  empty3d.hpp  glue_and_generic_types.hpp  intersection.cpp  intersection_problem.hpp  intersection_problem_base.cpp  intersection_problem_base.hpp  intersection_tests_3d.cpp  intersection_tests_3d.hpp  intersection_workspace.hpp  perturbation_epsilon.cpp  perturbation_epsilon.hpp  self_intersection_finder.cpp  self_intersection_finder.hpp  triangle_problem.hpp  triangulator.cpp  triangulator.hpp
src/math/: basic_stats.hpp  bounding_box_3D_template.hpp  ext4.hpp  ext4_base.hpp  fixext4.hpp  fixint.hpp  gmpext4.hpp  min_and_max_lengths.hpp  normal_projector.hpp  plane.cpp  plane.hpp  quantization.hpp  ray_3D_template.hpp  vector_2D_template.hpp  vector_3D_template.hpp
src/mesh/: boundary_edge_builder.cpp  boundary_edge_builder.hpp  edge_graph_cache.hpp  edge_incidence_counter.hpp  mesh.cpp  mesh.hpp  mesh_base.cpp  mesh_base.hpp  mesh_builder.cpp  self_intersecting_regions.cpp  self_intersecting_regions.hpp  si_region_premutations.inc  solver_perf_stats.hpp  surface_mesh.cpp  surface_mesh.hpp  topo_cache.cpp  topo_cache.hpp  triangle_mesh_builder.hpp  triangle_mesh_impl.cpp  triangle_mesh_impl.hpp  triangle_mesh_wrapper.cpp  triangle_mesh_wrapper.hpp  triangle_remapper.cpp
src/primitives/: SIMD_instruction_set.hpp  boundary_edge.cpp  boundary_edge.hpp  edge_and_incidence_count.hpp  non_manifold_edge.hpp  primitives.hpp  remappers.hpp  self_intersecting_edge.hpp  streaming_operators.cpp
src/statistics/: statistics_engines.cpp  statistics_engines.hpp
src/util/: ThreadPool.cpp  caching_factory.hpp  compile_time_utilities.hpp  construct_once_resizeable_vector.hpp  fast_stack.hpp  file_helpers.hpp  log.cpp  managed_intrusive_list.hpp  nonInitializing_allocator.hpp  optional_value_or_helper.hpp  performance_stringstream.hpp  resettable.hpp  sparse_vector.hpp  thread_pool.cpp  thread_pool.hpp  union_find.hpp
(+110 files in other folders)
